<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:icon="@drawable/ic_baseline_settings_24"
        app:fragment="com.screentime.airpod.main.ui.settings.general.GeneralSettingsFragment"
        app:iconSpaceReserved="false"
        app:summary="@string/settings_general_description"
        app:title="@string/settings_category_general_label" />

    <Preference
        android:icon="@drawable/ic_baseline_widgets_24"
        app:fragment="com.screentime.airpod.reaction.ui.ReactionSettingsFragment"
        app:iconSpaceReserved="false"
        app:summary="@string/settings_reaction_description"
        app:title="@string/settings_reaction_label" />

    <Preference
        android:key="settings.share"
        android:icon="@drawable/ic_baseline_share_24"
        app:iconSpaceReserved="false"
        app:summary="@string/settings_share_description"
        app:title="@string/settings_share_label" />

    <Preference
        android:key="settings.rate"
        android:icon="@drawable/ic_baseline_star_24"
        app:iconSpaceReserved="false"
        app:summary="@string/settings_rate_description"
        app:title="@string/settings_rate_label" />

</PreferenceScreen>